[gd_scene load_steps=6 format=2]

[ext_resource path="res://test dot.png" type="Texture" id=1]
[ext_resource path="res://CarInstance.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7919, 26.1139 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.859818, 19.8532 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 14.402 )

[node name="Car" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.731, 0 )
scale = Vector2( 1.874, 1.874 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2DL" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -14.5164, 0.33371 )
shape = SubResource( 2 )

[node name="CollisionShape2DR" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 14.433, -0.33371 )
shape = SubResource( 2 )

[node name="Eyeline" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eyeline"]
position = Vector2( -0.188103, -22.385 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Eyeline" to="." method="_on_Eyeline_body_entered"]
[connection signal="body_entered" from="Eyeline" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Eyeline" to="." method="_on_Eyeline_body_exited"]
